--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                           alt=""
                           width="200px"
                           height="200px"
-                          class="rounded-circle pb-4"
+                          class="rounded-circle"
                         />
                         <p class="py-2 text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, doloremque ad eveniet cumque asperiores voluptatem necessitatibus consequatur quam commodi debitis.</p>
                         <h3 class="text-white-50">Budi Sukamti</h3>
