--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </header>
     <main>
-      <section id="features">
+      <section id="features" class="py-5">
         <div class="container py-5">
           <h2 class="text-center fw-bold fs-1">Featured Food Items</h2>
           <div class="row py-5 gap-4 gap-lg-0">
@@ -119,7 +119,7 @@
         </div>
       </section>
       <section id="howitworks" class="howitworks">
-        <div class="container">
+        <div class="container py-5">
           <h2 class="text-center fw-bold fs-1 mb-4">How QuashaXpress Works</h2>
           <div class="row">
             <div class="col-lg-6 col-12 py-4">
@@ -230,35 +230,38 @@
     </main>
     <footer>
       <!-- place footer here -->
-      <div class="container py-5">
+      <div class="container pt-5">
         <div class="row">
           <div class="col-12 col-lg-4">
             <h4 class="fw-bold">Visit Us</h4>
-            <h5 class="lh-base">1234 Foodie Lane, Cityville, State,Country</h5>
-            <a href="mailto:info@quashaexpress@gmail.com">info@quashaexpress.com</a>
+            <h5 class="lh-base pt-3 d-flex align-items-center"><ion-icon name="flag"></ion-icon>1234 Foodie Lane, Cityville, State,Country</h5>
+            <a href="mailto:info@quashaexpress@gmail.com" class="d-flex align-items-center gap-2"><ion-icon name="mail"></ion-icon>info@quashaexpress.com</a>
           </div>
-
           <div class="col-12 col-lg-4">
             <h4 class="fw-bold">Our Links</h4>
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a href="#" class="nav-link text-black">Home</a>
+                <a href="#" class="nav-link d-flex align-items-center gap-2"><ion-icon name="home"></ion-icon>Home</a>
               </li>
               <li class="nav-item">
-                <a href="#howitworks" class="nav-link text-black">How It Works</a>
+                <a href="#howitworks" class="nav-link d-flex align-items-center gap-2"><ion-icon name="globe"></ion-icon>How It Works</a>
               </li>
               <li class="nav-item">
-                <a href="#features" class="nav-link text-black">Features</a>
+                <a href="#features" class="nav-link d-flex align-items-center gap-2"><ion-icon name="walk"></ion-icon>Features</a>
               </li>
             </ul>
           </div>
           <div class="col-12 col-lg-4">
             <h4 class="fw-bold">Contact Us</h4>
             <div class="d-flex align-items-center gap-2">
-              <a href="http://facebook.com"><ion-icon class="icon bg-success px-2 py-2" name="logo-facebook" style="font-size: 20px; border-radius: 100%; color: white; shadow: none"></ion-icon></a>
-              <a><ion-icon class="icon bg-success px-2 py-2" name="logo-instagram" style="font-size: 20px; border-radius: 100%; color: white"></ion-icon></a>
-              <a><ion-icon class="icon bg-success px-2 py-2" name="logo-github" style="font-size: 20px; border-radius: 100%; color: white"></ion-icon></a>
+              <a href="http://facebook.com"><ion-icon class="icon bg-success px-2 py-2" name="logo-facebook" style="font-size: 25px; border-radius: 100%; color: white; shadow: none"></ion-icon></a>
+              <a><ion-icon class="icon bg-success px-2 py-2" name="logo-instagram" style="font-size: 25px; border-radius: 100%; color: white"></ion-icon></a>
+              <a><ion-icon class="icon bg-success px-2 py-2" name="logo-github" style="font-size: 25px; border-radius: 100%; color: white"></ion-icon></a>
             </div>
+          </div>
+          <div class="col-12">
+            <hr />
+            <h5 class="text-center fw-bold">&copy; 2023 Copyright: Alvin Cennanda</h5>
           </div>
         </div>
       </div>
